<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group_nav"
        android:checkableBehavior="single">

        <!-- Hidden by default; shown only when a tracking session is active -->
        <item
            android:id="@+id/nav_tracking"
            android:icon="@drawable/ic_timer"
            android:title="@string/nav_tracking"
            android:visible="false" />

        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_projects"
            android:title="@string/nav_projects" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_calendar" />

        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_activity"
            android:title="@string/nav_activity" />

        <item
            android:id="@+id/nav_archived"
            android:icon="@drawable/ic_archive"
            android:title="@string/title_archived" />

    </group>

    <group
        android:id="@+id/group_secondary"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_dark_mode"
            android:icon="@drawable/ic_dark_mode"
            android:title="@string/nav_dark_mode"
            android:checkable="false"
            app:actionLayout="@layout/menu_item_switch" />

    </group>

    <group
        android:id="@+id/group_links"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_github_app"
            android:icon="@drawable/ic_github"
            android:title="@string/nav_github_app" />

        <item
            android:id="@+id/nav_github_backend"
            android:icon="@drawable/ic_github"
            android:title="@string/nav_github_backend" />

    </group>

</menu>
